# QtProject

QT_BasicTimer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
basicCalculator/: mainwindow.cpp  mainwindow.h  mainwindow.ui
random_plotter/: mainwindow.cpp  mainwindow.h  mainwindow.ui  random_plotter.pro
sinePlotter/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
